welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: reassignment to val
	if (die1=die2 && noDoubles==true) {
                ^withoutDoubles:4: error: reassignment to val
			die1=die1 +1
                            ^withoutDoubles:6: error: reassignment to val
		else {die1=1}
                          ^